# 0HITL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  analyze_session_logs.py  context.py  docker-compose.yml  main.py  pyproject.toml  setup-0-hitl.sh  test_api_smoke.py  test_document_skill.py  test_engine_mock.py  test_http_client_skill.py  test_log_analysis.py  test_memory_post_session.py  test_model_registry.py  test_persistent_runtime.py  test_python_runtime_skill.py  test_real_agent.py  test_runner_metrics.py  test_suite.py  test_tasks_skill.py  test_telegram_connector.py  test_web_skill.py  test_workspace_plus_skill.py
core/: agents.py  auth.py  bus.py  context.py  engine.py  log_analysis.py  memory.py  model_registry.py  models.py  prompter.py  resilience.py  runner.py  runtime_context.py  security.py  session_store.py  skills.py  superego.py  tasks.py  telegram_connector.py  tools.py
docs/: context.md  creating-a-skill.md  memory-and-model-strategy.md
gateway/: api.py
gateway/static/: app.js  index.html
profiles/: orchestrateur.md
skills/document/: SKILL.md  skill.yaml  tools.py
skills/http_client/: SKILL.md  skill.yaml  tools.py
skills/python_runtime/: SKILL.md  skill.yaml  tools.py
skills/system/: SKILL.md  skill.yaml  tools.py
skills/tasks/: SKILL.md  skill.yaml  tools.py
skills/web/: SKILL.md  skill.yaml  tools.py
skills/workspace_plus/: SKILL.md  skill.yaml  tools.py
